--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,4 +1,6 @@
 ---
+import { BASE_URL } from "@/consts"
+
 export interface Props {
     title: string
     description: string
@@ -11,7 +13,7 @@ const { title, description } = Astro.props
 <!-- Global Metadata -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<link rel="icon" type="image/svg+xml" href={`https://cdn.detik.net.id/detikcom/images/favicon.ico?v=2024090208475`} />
+<link rel="icon" type="image/svg+xml" href={`${BASE_URL}/favicon.svg`} />
 
 <!-- Primary Meta Tags -->
 <title>{title}</title>
